--- a/style.css
+++ b/style.css
@@ -1,15 +1,72 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono|Rubik+Mono+One');
 
-body {
-  /*background-color: #FCFCFC;*/
-  background:  linear-gradient(to top, #FFFFFF, #D1D1E6);
-  font-family: 'Roboto Mono', monospace;
+/* Mobile Styles */
+@media only screen and (max-width: 25.000em) {
+  body {
+    background-color: #F09A9D; /* Red */
+  }
+}
+/* Tablet Styles */
+@media only screen and (min-width: 768px) {
+   .container {
+       grid-template-columns: repeat(4, 1fr);
+   }
+   .box-2 {
+     grid-row: 1 / 3;
+     grid-column: 1 / 3;
+    }
+    .box-1 {
+     grid-row: 1 / 2;
+     grid-column: 3 / 5;
+   }
+    .box-3 {
+     grid-column: 3 / 5;
+     grid-row: 2 / 3;
+   }
+  
+    .box-4 {
+     grid-column: 1 / 2;
+     grid-row: 3 / 4;
+   }
+
+    .box-5 {
+     grid-column: 2 / 4;
+     grid-row: 3 / 4;
+   }
 }
 
-.flex-container {
- display: flex;
- flex-direction: column;
- justify-content: center;
+/* Desktop Styles */
+@media only screen and (min-width: 1024px) {
+   .container {
+       grid-template-columns: repeat(3, 1fr);
+   }
+   .box-1 {
+     grid-column: 1 / span 3;
+     grid-row: 1 / 2;
+   }
+   .box-2 {
+     grid-column: 1 / span 3;
+     grid-row: 2 / 3;
+   }
+    .box-3 {
+     grid-column: 1 / 3;
+     grid-row: 3 / 6;
+   }
+  
+    .box-4 {
+     grid-column: 3 / 4;
+     grid-row: 3 / 6;
+   }
+
+    .box-5 {
+     grid-column: 1 / 4;
+     grid-row: 6 / 7;
+   }
+}
+
+body {
+  background-color: #FCFCFC;
+  font-family: 'Roboto Mono', monospace;
 }
 
 
@@ -30,7 +87,6 @@ p {
 }
 
 /* MENU */
-
 ul {
     list-style-type: none;
     margin: 0;
@@ -85,12 +141,6 @@ li.dropdown {
     display: block;
 }
 
-/* CONTENIDO */
-div.content {
-    width: 100%;
-    border: none;
-}
-
 div.box {
     box-sizing: border-box;
     width: 50%;
@@ -99,8 +149,7 @@ div.box {
     padding: 8px 24px;
 }
 
-/* ANIMACION */
-
+/* ANIMACION SLIDER */
 div.slider {
   height: 120px;
   width: 100%;
@@ -118,7 +167,32 @@ div.slider {
     to {background-color: #8E76D6;}
 }
 
+/* CSS Grid*/
 
+.container {
+    display: grid;
+    grid-template-columns: 100px auto 100px;
+    grid-template-rows: repeat(6, auto);
+    grid-gap:0.5rem;
+    grid-template-areas: "box1 box1 box1"  "box3 box3 box3" "box5 box5 box5";
+}
 
+/*NAV*/
+.box-1 {
+grid-area: box1;
+}
+
+/*MAIN*/
+.box-3 {
+grid-area: box3;
+background-color:#fcfcfc;
+}
+
+/*FOOTER*/
+.box-5 {
+grid-area: box5;
+background-color:#000000;
+color: #ffffff;
+}
 
 
