--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 /* Mobile Styles */
 @media only screen and (max-width: 25.000em) {
   body {
-    background-color: #F09A9D; /* Red */
+    background-color: #F09A9D;
   }
 }
 /* Tablet Styles */
@@ -81,6 +81,11 @@ h2 {
   color: #11BEB3;
 }
 
+h4 {
+  font-size: 18px;
+  color: #583DA8;
+}
+
 p {
   font-size: 15px;
   color: #515151;
@@ -149,26 +154,14 @@ div.box {
     padding: 8px 24px;
 }
 
-/* ANIMACION SLIDER */
+/* SLIDER */
 div.slider {
-  height: 120px;
+  height: 600px;
   width: 100%;
-  background-color: #583DA8;
-  -webkit-animation-name: colorcito; 
-  -webkit-animation-duration: 4s;
-  animation-name: colorcito;
-  animation-duration: 4s;
-  animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out;
-}
-
-@-webkit-keyframes colorcito {
-    from {background-color: #583DA8;}
-    to {background-color: #8E76D6;}
+  background-image: url('img/bg.jpg');
 }
 
 /* CSS Grid*/
-
 .container {
     display: grid;
     grid-template-columns: 100px auto 100px;
@@ -194,5 +187,6 @@ grid-area: box5;
 background-color:#000000;
 color: #ffffff;
 }
+
 
 
